# term-rewriting-xml

./: .gitignore  CHANGELOG  LICENSE  README.md  stack-13.20.yaml  stack.yaml  term-rewriting-xml.cabal
src/Data/Rewriting/Problem/: Xml.hs
src/Data/Rewriting/Rule/: Xml.hs
src/Data/Rewriting/Term/: Xml.hs
testsuite/: Main.hs
