name:                term-rewriting-xml
version:             0.1.1.1
synopsis:            XML parser for term-rewriting-library
license-file:        LICENSE
author:              alpako
maintainer:          ako-gitrepos@vfemail.net
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Rewriting.Problem.Xml
  other-modules:
    Data.Rewriting.Rule.Xml
    Data.Rewriting.Term.Xml
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    term-rewriting,
    hexpat,
    word8
  default-language:
    Haskell2010
  ghc-options:
    -Wall

-- Test-suite testsuite
--   type:
--     exitcode-stdio-1.0
--   hs-source-dirs:
--     testsuite
--   main-is:
--     Main.hs
--   build-depends:
--     base           >=4.7  && <5,
--     term-rewriting,
--     term-rewriting-xml,
--     QuickCheck,
--     directory,
--     filepath,
--     containers
--   default-language:    Haskell2010

